# pillar_algos

./: .actrc  .gitignore  .pre-commit-config.yaml  404.html  README.md  __init__.py  algo1.py  algo2.py  algo3_0.py  algo3_5.py  algo4.py  algorithm3_6.ipynb  algorithm_1.ipynb  algorithm_2.ipynb  algorithm_3.5.ipynb  algorithm_3.6.ipynb  algorithm_3.ipynb  algorithm_4.ipynb  archive.ipynb  brain.py  debugging_area.ipynb  index.html  main.py  mkdocs.yml  ml_flow.py  optimize_us.ipynb  partial_fit_example.py  pillar.ipynb  requirements.txt  results.txt  sample_data.json  sandbox.ipynb  setup.py
.github/workflows/: generate-docs.yaml  publish.yaml  test.yaml
Algorithm_1/: index.html
Algorithm_2/: index.html
Algorithm_3.0/: index.html
Algorithm_3.5/: index.html
Brain/: index.html
data/: big_data.json  emoticons.csv  references.db  top_emoticons.csv  top_emoticons.xlsx
datasets/: emoticon_labels.csv
dev_tools/: README.md  pyproject.toml
dev_tools/pillaralgos_dev/: __init__.py  dev_helpers.py  sanity_checks.py
docs/: Algorithm_1.md  Algorithm_2.md  Algorithm_3.0.md  Algorithm_3.5.md  Brain.md  index.md
exports/: algo1_results.json  algo2_mean_rate_per_2min.json  algo3.5_num_emo.json  algo3.5_num_words_emo.json  algo3.5_num_words_only.json  algo3_top_user_appears.json
helpers/: __init__.py  abstracts.py  ccc_labeling.py  data_handler.py  exceptions.py
pillaralgos/: algo1.py  algo2.py  algo3_0.py  algo3_5.py
pillaralgos/.ipynb_checkpoints/: algo2-checkpoint.py  algo3_0-checkpoint.py
pillaralgos/helpers/: data_handler.py
prod/: README.md  pyproject.toml  reinstall_pill.sh
prod/pillaralgos/: __init__.py  algo1.py  algo2.py  algo3_0.py  algo3_5.py  algo3_6.py  algo4.py  brain.py
prod/pillaralgos/helpers/: ccc_labeling.py  data_handler.py  emoji_getter.py  exceptions.py
prod/test/: test_algos.py  test_brain.py  test_helpers.py
prod/test/sample_data/: med_algo2_answer.pkl  med_algo4_answer.pkl  med_brain_answer.pkl  sample_sm.json
pypi/: README.md  pyproject.toml  setup.cfg  setup.py
pypi/dev_tools/: dev_helpers.py  pyproject.toml
pypi/dev_tools/pillaralgos_dev/: __init__.py  dev_helpers.py
pypi/pillaralgos/: __init__.py  algo1.py  algo2.py  algo3_0.py  algo3_5.py
pypi/pillaralgos/helpers/: data_handler.py  graph_helpers.py
pypi/prod/: README.md  pyproject.toml
pypi/prod/pillaralgos/: __init__.py  algo1.py  algo2.py  algo3_0.py  algo3_5.py
pypi/prod/pillaralgos/helpers/: __init__.py  data_handler.py  emoji_getter.py
pypi/prod/test/: test_algos.py  test_data_handler.py
search/: search_index.json
src/pillaralgos.egg-info/: PKG-INFO
test/: test_brain.py  test_helpers.py
(+7 files in other folders)
