[tool.poetry]
name = "pillaralgos"
version = "1.0.20"
description = 'Algorithms for Pillar. Currently includes "mini" algorithms, nothing too sophisticated.'
authors = ["Peter Gates <pgate89@gmail.com>"]
readme = "README.md"
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"
numpy = "^1.20.2"

[tool.poetry.urls]
"Pillar" = "https://pillar.gg"
"Github" = "https://github.com/pillargg/twitch_chat_analysis/"
"Bug Tracker" = "https://github.com/pillargg/twitch_chat_analysis/issues"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
