[metadata]
name = pillaralgos
version = 1.0.1
author = Peter Gates
author_email = pgate89@gmail.com
description = Algorithms for Pillar. Currently includes "mini" algorithms, nothing too sophisticated.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pillargg/twitch_chat_analysis/tree/pypi_reorganize
project_urls =
    Pillar = https://pillar.gg

[options]
package_dir =
    = pillaralgos
packages = find:
python_requires = >=3.8

[options.packages.find]
where = pillaralgos